Uploading Ducksearch to Github

--- a/app/static/app_static/edit_account.css
+++ b/app/static/app_static/edit_account.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   display: flex;
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
-  background-image: url("https://i2.wp.com/thechickhatchery.com/wp-content/uploads/2017/07/White-Layer-Ducks.jpg?fit=276%2C250&ssl=1");
+  background-image: url("https://render.fineartamerica.com/images/rendered/default/print/8.000/5.375/break/images-medium/4-male-mallard-duck-steve-javorsky.jpg");
   background-size: 100%, 100%;
 }
 
