--- a/staticfiles/app_static/error.css
+++ b/staticfiles/app_static/error.css
@@ -5,7 +5,6 @@ body {
   display: flex;
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
   text-align: center;
-  background-image: url("https://kids.nationalgeographic.com/content/dam/kids/photos/animals/Birds/H-P/mallard-male-standing.ngsversion.1396906974359.jpg");
 }
 
 #main {
@@ -13,19 +12,13 @@ body {
   margin: auto;
 }
 
+#center {
+  width: 100%;
+  margin: auto;
+}
+
 .invisible {
   display: none;
-}
-
-.plaintext_field {
-  border-radius: 20px;
-  width: 30%;
-  height: 7%;
-  padding-left: 10px;
-}
-
-.plaintext_field:focus, button:focus{
-    outline: none;
 }
 
 a {
@@ -37,4 +30,10 @@ button {
   padding: 5px;
   border-radius: 20px;
   background-color: white;
+  margin-top: 30px;
+}
+
+img {
+  width: 300px;
+  height: 300px;
 }
